--- a/component/pom.xml
+++ b/component/pom.xml
@@ -99,7 +99,7 @@
     <dependency>
       <groupId>org.everit.authenticator</groupId>
       <artifactId>org.everit.authenticator.ldap</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
 
     <dependency>
