--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.everit.authenticator</groupId>
     <artifactId>org.everit.authenticator.ldap.ecm.parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <groupId>org.everit.authenticator</groupId>
@@ -104,7 +104,7 @@
     <dependency>
       <groupId>org.everit.authenticator</groupId>
       <artifactId>org.everit.authenticator.ldap.ecm</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
 
     <!-- Basic OSGi to tests -->
