--- a/component/pom.xml
+++ b/component/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.authenticator</groupId>
   <artifactId>org.everit.authenticator.ldap.ecm</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <packaging>bundle</packaging>
 
